@@ -61,6 +61,10 @@ Version 1.7.7
        grouped correctly. (Stefan)
 - BUG: Issue #264: format exception in
        right-drag export. (Stefan)
+- BUG: Issue #265: commit dialog "keep locks"
+       ignored for unmodified items. (Stefan)
+- BUG: Issue #266: recursion in
+       checkout dialog. (Stefan)
 
 Version 1.7.6
 - BUG: Issue #209: repo browser doesn't
